[project]
name = "arborpy"
version = "0.2.0"
description = "A comprehensive Python library for tree data structures"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Prabhav Jalan", email = "prabhavjalan12@gmail.com" }
]
keywords = ["tree", "data-structures", "binary-tree", "bst", "avl", "trie", "heap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/prabhav-jalan/arborpy"
Issues = "https://github.com/prabhav-jalan/arborpy/issues"
Changelog = "https://github.com/prabhav-jalan/arborpy/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arborpy"]

# --- Development dependencies ---
[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "pre-commit>=3.7",
]

# --- Tool configuration ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=arborpy --cov-report=term-missing"

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "D",    # pydocstyle
    "B",    # bugbear
    "SIM",  # simplify
    "RUF",  # ruff-specific
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
